--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ et-xmlfile==1.1.0
 fastapi==0.85.2
 h11==0.14.0
 idna==3.4
+numpy==1.23.4
 openai==0.25.0
 openpyxl==3.0.10
+pandas==1.5.1
 pandas-stubs==1.5.1.221024
 pydantic==1.10.2
 python-dateutil==2.8.2
